# sc-smart-device

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  conftest.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json  settings.local.json
development/: README.md  shelly.py  switch_basic.py  switch_init.py  switch_meter.py  switch_temperature.py  switch_view.py  switch_webhooks.py  tasmota_status.py  validation_schema.py
docs/: example_code.md  example_config.md  index.md  objects.md  sc_smart_device.md  sc_smart_device_view.md  sc_smart_device_worker.md  shelly_models_list.md  shelly_temp_probes.md  shelly_webhooks.md
example_code/: index.html
example_config/: index.html
examples/: README.md  simple_example.py  switch_basic.py  switch_config.yaml  switch_info.py  switch_init.py  switch_meter.py  switch_multiple_output.py  switch_temperature.py  switch_view.py  switch_webhooks.py  switch_worker.py  validation_extras.py
objects/: index.html
sc_smart_device/: index.html
sc_smart_device_view/: index.html
sc_smart_device_worker/: index.html
scripts/: generate_shelly_models.py  shelly_models.md
search/: search_index.json
shelly_models_list/: index.html
shelly_temp_probes/: index.html
shelly_webhooks/: index.html
simulation_files/: Sydney_Dev_A.json  Sydney_Solar.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: README.md  sc_fixtures.py  test_basic.py  test_get_x_value.py  test_sc_smart_device.py  test_smart_device_view.py  test_tasmota.py  test_worker.py
(+42 files in other folders)
